--- a/projects/angular/src/layout/breadcrumbs/_properties.breadcrumbs.scss
+++ b/projects/angular/src/layout/breadcrumbs/_properties.breadcrumbs.scss
@@ -9,7 +9,6 @@
 
 @include mixins.exports('breadcrumbs.properties') {
   :root [cds-theme] {
-    --clr-breadcrumb-link-color: #{tokens.$cds-alias-object-interaction-background-highlight};
-    --clr-breadcrumb-item-space: #{tokens.$cds-global-space-8};
+    --clr-breadcrumb-item-space: #{tokens.$cds-global-space-5};
   }
 }
